# SafetySystem

./: README.md
SafetySystms/: .gitignore  CMakeLists.txt  conanfile.py
SafetySystms/doc/: StartChart.plantuml
SafetySystms/src/: CMakeLists.txt
SafetySystms/src/CrudeSafetyRules/: CMakeLists.txt
SafetySystms/src/CrudeSafetyRules/include/CrudeSafetyRules/: CrudeSafetyRules.h
SafetySystms/src/CrudeSafetyRules/src/: CrudeSafetyRules.cpp
SafetySystms/src/GitVersion/: CMakeLists.txt
SafetySystms/src/GitVersion/include/GitVersion/: GitVersion.h
SafetySystms/src/GitVersion/src/: GitVersion.cpp
SafetySystms/src/RefinedSafetyRules/: CMakeLists.txt
SafetySystms/src/RefinedSafetyRules/include/RefinedSafetyRules/: IRefinedSafetyRules.h  RefinedSafetyRules.h
SafetySystms/src/RefinedSafetyRules/src/: RefinedSafetyRules.cpp
SafetySystms/src/SafetyRules/: CMakeLists.txt
SafetySystms/src/SafetyRules/doc/: README.md  SequenceDiagram.plantuml
SafetySystms/src/SafetyRules/include/SafetyRules/: ISafetyRules.h  SafetyRules.h
SafetySystms/src/SafetyRules/src/: SafetyRules.cpp
SafetySystms/src/Simple/: CMakeLists.txt
SafetySystms/src/Simple/include/Simple/: Simple.h
SafetySystms/src/Simple/src/: Simple.cpp
SafetySystms/tests/: CMakeLists.txt
SafetySystms/tests/Test_SafetyRules/: CMakeLists.txt  Test_SafetyRules.cpp
SafetySystms/tests/Test_Simple/: CMakeLists.txt  Test_Simple.cpp
